<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nf.fr.k49.sheepdoc</groupId>
  <artifactId>sheepdoc</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>sheepdoc</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sheepdoc.mainClass>nf.fr.k49.sheepdoc.App</sheepdoc.mainClass>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <surefire-plugin.version>2.22.1</surefire-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>5.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>5.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.weblookandfeel</groupId>
      <artifactId>weblaf-ui</artifactId>
      <version>1.2.13</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>${sheepdoc.mainClass}</mainClass>
          <arguments>
            <argument>--add-opens java.base/java.util=ALL-UNNAMED</argument>
            <argument>--add-opens java.base/java.text=ALL-UNNAMED</argument>
            <argument>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</argument>
            <argument>--add-opens java.base/java.net=ALL-UNNAMED</argument>
            <argument>--add-opens java.base/java.lang=ALL-UNNAMED</argument>
            <argument>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/javax.swing=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/javax.swing.text=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/java.awt.geom=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/java.awt=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/java.beans=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/javax.swing.table=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/com.sun.awt=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/sun.awt=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/sun.swing=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/sun.font=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/javax.swing.plaf.synth=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED</argument>
            <argument>--add-opens java.desktop/com.apple.laf=ALL-UNNAMED</argument>
          </arguments>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>single</goal>
                </goals>
                <configuration>
                    <archive>
                    <manifest>
                        <mainClass>${sheepdoc.mainClass}</mainClass>
                    </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <descriptors>
                      <descriptor>src/main/assembly/src.xml</descriptor>
                    </descriptors>
                </configuration>
            </execution>
        </executions>
    </plugin>
    </plugins>
  </build>

</project>
